--- a/Módulo - CSS/CSS/Css Avançado/10 - flex-mundo-real-parte-1/index.html
+++ b/Módulo - CSS/CSS/Css Avançado/10 - flex-mundo-real-parte-1/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flex-item grow</title>
+    <title>centralização vertical</title> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>asdasdas</h1>
-    <Div class="commit">
+    <section>
+        <h1>centralização vertical</h1>
         
-    </Div>
+        <div class="flex painel">
+            <h2>título 1</h2>
+        </div>
+    </section>
+
+    
 </body>
 </html>
