estilização do gerador de novos advice

--- a/Exercícios - HTML+CSS/Exercícios-flex-box/02 - Aplicativo de conselhos aleatórios/index.html
+++ b/Exercícios - HTML+CSS/Exercícios-flex-box/02 - Aplicativo de conselhos aleatórios/index.html
@@ -19,17 +19,18 @@
                 <span class="span-advice-number">Advice # 117</span>
             </div>
             <div class="advice-text">
-                <span class="span-advice-text">"It is easy to sit up and take notice, what's difficult is getting up and taking action"</span>
+                <span class="span-advice-text">"It is easy to sit up and take notice, what's difficult is getting up and
+                    taking action"</span>
             </div>
             <div class="Divider">
-                <span class="span-divider">/  /</span>
-            </div>
-            <div class="button-generator">
-                <a href="#">X</a>
+                <span class="span-divider">/ /</span>
             </div>
         </div>
+        <div class="button-generator">
+            <a href="#">X</a>
+        </div>
     </section>
-
+    
 </body>
 
 </html>
