--- a/Exercícios - HTML+CSS/Exercícios-flex-box/03 - Bank-menu/index.html
+++ b/Exercícios - HTML+CSS/Exercícios-flex-box/03 - Bank-menu/index.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/CSS/style.css">
+    <link rel="stylesheet" href="src/CSS/reset.css">
     <title></title>
 </head>
+
 <body>
-    
+    <section class="main">
+        <div class="logo-name">
+            <div class="logo">
+                <img src="src/Images/logo.png" alt="logo do bank">
+            </div>
+            <div class="nome">
+                <span class="nome-banco">The bank</span>
+            </div>
+        </div>
+        <nav>
+            <div class="info-container">
+                <div class="info-style">
+                    <div class="home">
+                        <span>
+                            home
+                        </span>
+                    </div>
+                    <div class="sobre">
+                        <span>
+                            sobre
+                        </span>
+                    </div>
+                    <div class="contato">
+                        <span>
+                            contato
+                        </span>
+                    </div>
+                    <div class="blog">
+                        <span>
+                            Blog
+                        </span>
+                    </div>
+                    <div class="carreira">
+                        <span>
+                            carreira
+                        </span>
+                    </div>
+                    <div class="cadastre-se">
+                        <span>
+                            cadastre-se
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </section>
+
 </body>
+
 </html>
