--- a/Exercícios - HTML+CSS/Exercícios-flex-box/04 - Lista de Imagens/index.html
+++ b/Exercícios - HTML+CSS/Exercícios-flex-box/04 - Lista de Imagens/index.html
@@ -6,29 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de imagens</title>
-    <link rel="stylesheet" href="SRC/CSS/reset.css">
-    <link rel="stylesheet" href="SRC/CSS/Style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="reset.css">
+
+
 </head>
 
 <body>
-    <section>
-        <div class="canva">
-            <span>roma</span>
-            <span>Michelangelo</span>
-        </div>
-        <div class="canva">
-            <span>roma</span>
-            <span>Michelangelo</span>
-        </div>
-        <div class="canva">
-            <span>roma</span>
-            <span>Michelangelo</span>
-        </div>
-        <div class="canva">
-            <span>roma</span>
-            <span>Michelangelo</span>
-        </div>
-    </section>
+
 </body>
 
 </html>
