Alteração na posição das pastas

--- a/Exercícios - HTML+CSS/Exercícios-flex-box/04 - Lista de Imagens/index.html
+++ b/Exercícios - HTML+CSS/Exercícios-flex-box/04 - Lista de Imagens/index.html
@@ -16,6 +16,50 @@
 </head>
 
 <body>
+    <main>
+        <section class="pinturas">
+            <div class="pintura">
+
+                <img src="Images/rome.png" alt="pintura roma">
+
+                <div class="informações">
+                    <h2 class="titulo">rome</h2>
+                    <h3 class="subtitulo">Michelangelo</h3>
+                </div>
+            </div>
+
+            <div class="pintura">
+
+                <img src="Images/boat.png" alt="pintura roma">
+
+                <div class="informações">
+                    <h2 class="titulo">Boat at sea</h2>
+                    <h3 class="subtitulo">Vincent Van Gogh</h3>
+                </div>
+            </div>
+
+            <div class="pintura">
+
+                <img src="Images/sand-and-sea.png" alt="pintura roma">
+
+                <div class="informações">
+                    <h2 class="titulo">Sand and sea</h2>
+                    <h3 class="subtitulo">Da Vinci</h3>
+                </div>
+            </div>
+
+            <div class="pintura">
+
+                <img src="Images/starry-night.png" alt="pintura starry night">
+
+                <div class="informações">
+                    <h2 class="titulo">starry night</h2>
+                    <h3 class="subtitulo">Vincent Van Gogh</h3>
+                </div>
+            </div>
+
+        </section>
+    </main>
 
 </body>
 
