--- a/Módulo JS/JS/JS - Intermediário/14 - Objetos e arrays em conjunto/index.html
+++ b/Módulo JS/JS/JS - Intermediário/14 - Objetos e arrays em conjunto/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This</title>
+    <title>Objetos e arrays em conjunto</title>
 </head>
 <body>
-    <h1>This</h1>
+    <h1>Objetos e arrays em conjunto</h1>
     
 
     <script type="text/javascript" src="index.js"></script>
