--- a/Módulo JS/JS/JS - Intermediário/15 - Selecionando elementos DOM/index.html
+++ b/Módulo JS/JS/JS - Intermediário/15 - Selecionando elementos DOM/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This</title>
+    <title>Selecionando elementos DOM</title>
 </head>
 <body>
-    <h1>This</h1>
+    <h1>Selecionando elementos DOM</h1>
+
+    <p id="paragrafo1">Pragrafo 1</p>
+    <p>Paragrafo 2 </p>
     
 
     <script type="text/javascript" src="index.js"></script>
