--- a/Módulo JS/JS/JS - Intermediário/15 - Selecionando elementos DOM/index.html
+++ b/Módulo JS/JS/JS - Intermediário/15 - Selecionando elementos DOM/index.html
@@ -9,7 +9,10 @@
 
     <p id="paragrafo1">Pragrafo 1</p>
     <p>Paragrafo 2 </p>
+
+    <input type="text" name="email" class="tag-de-input" placeholder="digite seu e-mail aqui">
     
+    <input type="text" name="email" class="tag-de-input" placeholder="digite seu e-mail secundário aqui">
 
     <script type="text/javascript" src="index.js"></script>
 </body>
