--- a/Módulo JS/JS/JS - Intermediário/17 - Manipulando estilos e atributos do DOM/index.html
+++ b/Módulo JS/JS/JS - Intermediário/17 - Manipulando estilos e atributos do DOM/index.html
@@ -59,6 +59,12 @@
 
     <button onclick="marcarRadio('M')">Marcar Radio Masculino</button>
 
+    <br><br>
+
+    Masculino <input type="radio" name="genero" id="genero-masculino">
+
+    Feminino <input type="radio" name="genero" id="genero-feminino">
+
     <script type="text/javascript" src="index.js"></script>
 </body>
 
