--- a/Quest's/JS/Intermediário/04/index.html
+++ b/Quest's/JS/Intermediário/04/index.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quest 04 - </title>
+    <title>Exercício 4 - JS Intermediário</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <h1>Quest 04</h1>
-
+    <input type="text" class="input-text">
+    <input type="text" class="input-text">
     
-
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 </body>
+
 </html>
