EVOLUÇÃO SLIDES QUEST

--- a/Quest's/JS/Intermediário/05/index.html
+++ b/Quest's/JS/Intermediário/05/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Quest 5 - Slider</title>
 </head>
+
 <body>
-    
+    <section>
+        <div class="backgorund-image">
+            <div class="seta-esquerda">
+                <a href="#">
+                    <img src="src/seta esquerda blur" alt="seta esquerda"></a>
+            </div>
+            <div class="container">
+                <div class="title">Titulo Imagem 1</div>
+                <div class="description">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A excepturi, odit ex voluptas itaque
+                        voluptatibus, corrupti hic dolorem aliquid earum, recusandae provident? Fugiat distinctio
+                        voluptas iste nemo laboriosam at laudantium?Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Eveniet nisi quo est molestiae incidunt, modi voluptas? Accusantium, ipsa iste explicabo
+                        ducimus minima, et nostrum pariatur reiciendis vero dolorum cupiditate error.</p>
+                </div>
+
+                <div class="know-more">
+                    <a href="#">Know more</a>
+                </div>
+            </div>
+            <div class="seta-direita">
+                <a href="#">
+                    <img src="src/seta direita" alt="seta direita"></a>
+            </div>
+        </div>
+    </section>
+
+
+    <script type="text/javascript" src="index.js"></script>
 </body>
+
 </html>
